# spad_sort

./: pyproject.toml  sort_ale_data.ipynb
