[project]
name = "spad-sort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "spikeinterface>=0.103.2",
]
